- New: Add attachments on intervention cards.
- New: Can add personalised fields in emailing selectors.
- New: Customer code and supplier code can be defined automatically.
- New: Emailing feature can extract civility from contacts.
- New: Can create a third party from a member of fundation module.
- New: Can set a limit for stock alert to 0.
- New: Support SMTPS.
- Fix: Handle correctly the comment in status changing of supplier orders.
- Fix: Author, title and topic are correctly encoded in PDF.
- Fix: Now HTML output is always UTF8, this solve bad PDF encoding on old users.
- Fix: Save new model when changed on interventions.
- Fix: Failed to go on the future view of bank transaction if there is no 
  future bank transaction already wrote.  
- Fix: Bad ref in supplier list.
- Fix: Bad link in product statistics for supplier referers.
- Fix: Usage of reset of cursor in personalized numbering modules for a particular
  month (@ option) was broken.
- Can add contacts to a supplier invoice.
- Fix: When an invoice is changed back to status draft, warehouse is increased 
  back.
- Fix: Category of a bank transaction was not saved.
- Fix: Clicktodial plugin works correctly now
- Fix: Multiprices features works correctly.
- Fix: Project module and task creation.
- Fix: Validation of order if a file was attached.
- Fix: A lot of fixes in PDF generators.
- Fix: Bad line/pagebreak with long description of products on PDF.

For translators:
- Added 10 more new language files.
- Added autotranslator tool. A tool to build/update automatically
  languages files using Google API for a new language. Wonderfull to start a
  new translation.
  
For developers:
- Removed some deprecated files.
- Removed treemenu library.
- Renamed all function dolibarr_xxx into dol_xxx to have same prefix everywhere.
- Rewrite clone feature for supplier invoice to work like other clone features.
- First change to manage a future feature "stock PMP value".

