@@ -168,9 +168,15 @@ DolibarrLicense=License
 DolibarrProjectLeader=Project leader
 Developpers=Developers/contributors
 OtherDeveloppers=Other developers/contributors
-OfficialWebSite=International official web site
+OfficialWebSite=Dolibarr international official web site
 OfficialWebSiteFr=French official web site
 OfficialWikiFr=French wiki
+OfficialWiki=Dolibarr Wiki
+OfficialDemo=Dolibarr online demo
+ForDocumentationSeeWiki=For a user or developer documentation, for FAQs (Frequently Asked Questions), take a lookt at the Dolibarr Wiki: <b><a href="%s" target="_blank">%s</a></b>
+ForAnswersSeeForum=For other questions, help, you can read/ask questions on Dolibarr forum: <b><a href="%s" target="_blank">%s</a></b>
+HelpCenterDesc1=This area can help you to get a Help support service on Dolibarr.
+HelpCenterDesc2=Some part of this service are available in <b>english only</b>.
 CurrentTopMenuHandler=Current top menu handler
 CurrentLeftMenuHandler=Current left menu handler
 MeasuringUnit=Measuring unit
@@ -224,6 +230,7 @@ DoTestSendHTML=Test sending HTML
 ErrorCantUseRazInStartedYearIfNoYearMonthInMask=Error, can't user option @ if sequence {yy}{mm} or {yyyy}{mm} is not in mask.
 UMask=UMask parameter for new files on Unix/Linux/BSD file system.
 UMaskExplanation=This parameter allow you to define permissions set by default on files created by Dolibarr on server (during upload for example).<br>It must be the octal value (for example, 0666 means read and write for everyone).<br>Ce paramètre ne sert pas sous un serveur Windows.
+SeeWikiForAllTeam=Take a look at the wiki page for full list of all actors and their organisation
 
 # Modules
 Module0Name=Users & groups
